--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,21 +69,78 @@ body {
   background-color: #fff;
 }
 
-.mainindicatorstop{
-  width: 90px;
-  height: 90px;
-  background: red;
+
+.circleindicator{
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  position: relative;
+  height: 40px;
+  width: 40px;
 }
 
-.mainindicatorgo{
-  width: 90px;
-  height: 90px;
-  background: green;
+.circleindicator:after{
+  border-right: 4px solid rgba(255, 255, 255, 0.6);
+  border-radius: 50%;
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 6px;
+  width: 30px;
+  height: 30px;
 }
-.mainindicatoryellow{
-  width: 90px;
-  height: 90px;
-  background: yellow;
+
+.circleindicator.red {
+  background-color: #c0392b;
+  box-shadow: 0 0 20px 5px #c0392b;
+}
+
+.circleindicator.yellow {
+  background-color: #f1c40f;
+  box-shadow: 0 0 20px 5px #f1c40f;
+}
+
+.circleindicator.green {
+  background-color: #2ecc71;
+  box-shadow: 0 0 20px 5px #2ecc71;
+}
+
+
+
+
+
+
+.circleindicatorsmall{
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  position: relative;
+  height: 20px;
+  width: 20px;
+}
+
+.circleindicatorsmall:after{
+  border-right: 2px solid rgba(255, 255, 255, 0.6);
+  border-radius: 40%;
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 6px;
+  width: 10px;
+  height: 10px;
+}
+
+.circleindicatorsmall.red {
+  background-color: #c0392b;
+  box-shadow: 0 0 10px 2px #c0392b;
+}
+
+.circleindicatorsmall.yellow {
+  background-color: #f1c40f;
+  box-shadow: 0 0 20px 5px #f1c40f;
+}
+
+.circleindicatorsmall.green {
+  background-color: #2ecc71;
+  box-shadow: 0 0 20px 5px #2ecc71;
 }
 
 
